--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 .container {
-  width: 80vh;
+  width: 50vw;
   margin: 0 auto;
 }
 
@@ -50,7 +50,7 @@ body {
 .container ul li p:first-child {
   text-transform: uppercase;
   font-size: 1.2rem;
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid grey;
   padding: 20px;
 }
 /*# sourceMappingURL=style.css.map */
