--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,7 +7,7 @@ body {
 }
 
 .container {
-    width: 80vh;
+    width: 50vw;
     margin: 0 auto;
     h1, h2 {
         text-transform: uppercase;
@@ -41,7 +41,7 @@ body {
                 &:first-child {
                     text-transform: uppercase;
                     font-size: 1.2rem;
-                    border-bottom: 2px solid black;
+                    border-bottom: 2px solid grey;
                     padding: 20px;
                 }
             }
